--- a/views/partner.ejs
+++ b/views/partner.ejs
@@ -5,72 +5,92 @@
    
     <!-- <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css"> -->
-    <link rel="stylesheet" href="style/profile.css">
+    <!-- <link rel="stylesheet" href="style/profile.css"> -->
     <link rel="stylesheet" href="css/partner.css">
+    <script src="https://kit.fontawesome.com/e70d27db35.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css">
-<link href="https://fonts.googleapis.com/css2?family=Fredericka+the+Great&family=Fruktur&family=Rubik+Glitch&display=swap" rel="stylesheet">
-
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Fredericka+the+Great&family=Fruktur&family=Rubik+Glitch&display=swap" rel="stylesheet">
 </head>
-<body id="partnerPage">
-<div class="containerLanding">
+<body id="partner">
+    <header>
+            <nav>
+                <ul>
+                <a href="/"> <li><i class="fa fa-leaf fa" aria-hidden="true"> Home</i></li></a>
+                <a href="/whoWeAre"> <li> <i class="fa fa-leaf fa" aria-hidden="true">Who We Are</i></li></a>
+                <a href="/profile"> <li><i class="fa fa-leaf fa" aria-hidden="true"> Profile</i></li></a>
+                <a href="/signup"> <li> <i class="fa fa-leaf fa" aria-hidden="true">Sign Up</i></li></a>
+                <a href="/login"> <li><i class="fa fa-leaf fa" aria-hidden="true">Log In</i></li></a>
+                <a href="/logout"> <li><i class="fa fa-leaf fa" aria-hidden="true">Log Out</i></li></a>
+                <a href="/relationship"> <li><i class="fa fa-leaf fa" aria-hidden="true"> Add Viewers</i></li></a>
+                <a href="/feed"> <li><i class="fa fa-leaf fa" aria-hidden="true"> View Feed</i></li></a>
 
-    <div class="page-header text-center">
-        <h1><span class="fa fa-anchor"></span> Partner Page</h1>
-        <a href="/logout" class="btn btn-default btn-sm">Logout</a>
-        <a href="/" class="btn btn-default btn-sm">Home</a>
-        <a href="/profile" class="btn btn-default btn-sm">Profile</a>
-        <a href="/relationship" class="btn btn-default btn-sm">Add Viewers</a>
-        <a href="/chart" class="btn btn-default btn-sm">View charts</a>
-        <a href="/feed" class="btn btn-default btn-sm">View feed</a>
-    </div>
+            </nav>
+        </section>
+    </header>
 
-    <div class="row">
+        <main>
 
-        <!-- LOCAL INFORMATION -->
-        <div class="col-sm-6">
-            <div class="well">
-                <h3><span class="fa fa-user"></span> Local</h3>
-<!-- render stuff if this user exist -->
-                <% if (user.local.email) { %>
-                    <p>
-                        <!-- <strong>id</strong>: <%= user._id %><br> -->
-                        <strong>First Name</strong>: <%= user.local.firstName %><br>
-                        <strong>Last Name</strong>: <%= user.local.lastName %><br>
-                        <!-- <strong>email</strong>: <%= user.local.date %><br> -->
-                        <!-- <strong>password</strong>: <%= user.local.password %> -->
-                    </p>
-
-                    <a href="/unlink/local" class="btn btn-default">Unlink</a>
-
-                    <div class="logs">
+            <section class="leftSection">
+                <h3><span class="fa fa-user"></span> Partner</h3>
+                <!-- render stuff if this user exist -->
+                                <% if (user.local.email) { %>
+                                    <p>
+                                        <!-- <strong>id</strong>: <%= user._id %><br> -->
+                                        <strong>First Name</strong>: <%= user.local.firstName %><br>
+                                        <strong>Last Name</strong>: <%= user.local.lastName %><br>
+                                        <!-- <strong>email</strong>: <%= user.local.date %><br> -->
+                                        <!-- <strong>password</strong>: <%= user.local.password %> -->
+                                    </p>
+                <section class="imageHolder">
+                    <img class="profileImage" src="/img/coupleProfile.png">
+                </section>
+     </section>
+             <section class="rightSection"> 
+                       
+                 <section class="logs">
+                     <h2>To-Do List</h2>
+                        <ul class="ToDoList">
+                            <% for(var i=0; i<toDoList.length; i++) {%>
+                                <li class="message">
+                                    <span style="<%= toDoList[i].isStarred  ? 'color:green' : 'color:black' %>">
+                                      <%= toDoList[i].chore %> </span>
+                                  </li>
+                                <li class="message">  Date:<%= toDoList[i].date %> </li>
+                                <li>  Task:<%= toDoList[i].chore %>  </li>
+                                <!-- <li>Posted By:<%= toDoList[i].postedBy %> </li>   -->
+                                <span><i data-toDoStarred="<%= toDoList[i].isStarred %>" data-toDoId="<%= toDoList[i]._id %>"
+                                    class="fa fa-star"></i></span>
+                                <span><i data-toDoId="<%= toDoList[i]._id %>" class="fa fa-trash"></i></span>
+                             
+                            <% } %>
+                                </ul> 
+                                
+                                    <% } else { %>
+                                        <a href="/connect/local" class="btn btn-default">Connect Local</a>
+                                    <% } %>
+                      </section>
+             </section>
+         
     
-             
-          <ul class="ToDoList">
-            <% for(var i=0; i<toDoList.length; i++) {%>
-              <li class="message">
-                        Date:<%= toDoList[i].date %>
-                        Task:<%= toDoList[i].chore %>
-                        DailyPost:<%= toDoList[i].user %>
+                            <!-- LOCAL INFORMATION -->
+    </main>
+    <footer>
+        <section class="img">
+            <img class="ad" src="images/ad.jpg">
+          </section>
+        
+           <h4 class="title">Post Partum Direction Copyright ©2022 </h4>
+              <span class="rightSpan">Carla Hores</span>
+    </footer>
                 
-  
-              </li>
-            <% } %>
-            </ul>
-                        </ul> 
-                    </div>
-                    <% } else { %>
-                        <a href="/connect/local" class="btn btn-default">Connect Local</a>
-                    <% } %>
-    
-                    </div>
-    
 
-                    <!-- LOCAL INFORMATION -->
-                
 
-<script src="main.js"></script>
+<script src="partner.js"></script>
 
 </body>
 </html>
+
+
