--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -16,26 +16,24 @@
     rel="stylesheet">
 
 
+    <body id="profileLanding">
+      <div class="containerLanding">
 </head>
+<header>
+  <nav>
+    <ul>
+      <a href="/"> <li><i class="fa fa-leaf fa" aria-hidden="true"> Home</i></li></a>
+      <a href="/whoWeAre"> <li> <i class="fa fa-leaf fa" aria-hidden="true">Who We Are</i></li></a>
+      <a href="/profile"> <li><i class="fa fa-leaf fa" aria-hidden="true"> Profile</i></li></a>
+      <a href="/signup"> <li> <i class="fa fa-leaf fa" aria-hidden="true">Sign Up</i></li></a>
+      <a href="/login"> <li><i class="fa fa-leaf fa" aria-hidden="true">Log In</i></li></a>
+      <a href="/logout"> <li><i class="fa fa-leaf fa" aria-hidden="true">Log Out</i></li></a>
+      <a href="/relationship"> <li><i class="fa fa-leaf fa" aria-hidden="true"> Add Viewers</i></li></a>
+  </nav>
+</header>
 
-<body id="profileLanding">
-  <div class="containerLanding">
-    <header>
-      <h1><span> <i class="fa-solid fa-person-breastfeeding"></i></span> Profile Page</h1>
-      <a href="/logout" class="btn btn-default btn-sm">Logout</a>
-      <a href="/viewers" class="btn btn-default btn-sm">Home</a>
-      <a href="/profile" class="btn btn-default btn-sm">Profile</a>
-      <a href="/relationship" class="btn btn-default btn-sm">Add Viewers</a>
-      <a href="/chart" class="btn btn-default btn-sm">View charts</a>
-      <a href="/feed" class="btn btn-default btn-sm">View feed</a>
-      <h1><span> <i class="fa-solid fa-person-breastfeeding"></i></span> Welcome</h1>
-      <nav>
-        <ul>
-
-        </ul>
-      </nav>
-
-    </header>
+  
+      <h1><span> <i class="fa-solid fa-person-breastfeeding"></i></span> Welcome Back</h1>
     <main>
 
     <div class="row">
@@ -49,8 +47,6 @@
             <strong>First Name</strong>: <%= user.local.firstName %><br>
             <strong>Last Name</strong>: <%= user.local.lastName %><br>
           </p>
-  
-          <a href="/unlink/local" class="btn btn-default">Unlink</a>
           <% } else { %>
           <a href="/connect/local" class="btn btn-default">Connect Local</a>
           <% } %>
@@ -63,7 +59,7 @@
           <% for(var i=0; i<journalEntries.length; i++) {%>
           <li class="message">
             <a href="/journalEntries/<%= journalEntries[i]._id %>">
-              <h4> Date: <%= journalEntries[i].date %></h4>
+             <span class="entries"> Date: <%= journalEntries[i].date %> </span>
             </a>
             <span><i class="fa fa-star"></i></span>
             <span><i class="fa fa-trash"></i></span>
@@ -126,7 +122,7 @@
   
           </fieldset>
   
-          <fieldset class="pinkBack-1">
+          <fieldset class="pinkBack">
             <legend>How Can You Be supported?</legend>
   
             <fieldset class="pinkBack">
