--- a/views/relationship.ejs
+++ b/views/relationship.ejs
@@ -1,52 +1,104 @@
-
 <!doctype html>
 <html>
+
 <head>
-    <title>Relationship</title>
-   
-    <!-- <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css">
+  <title>Relationship</title>
+
+  <!-- <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css"> -->
-    <link rel="stylesheet" href="style/profile.css">
-    <link rel="stylesheet" href="css/profile.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css">
-<link href="https://fonts.googleapis.com/css2?family=Fredericka+the+Great&family=Fruktur&family=Rubik+Glitch&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="css/relationship.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Fredericka+the+Great&family=Fruktur&family=Rubik+Glitch&display=swap"
+    rel="stylesheet">
+  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css">
 
 </head>
-<body id="addUser">
-  <form >
-    <h3>Add an email:</h3>
+
+<body id="relationship">
+
+  <header>
+
+    <h1> Post Partum Direction</h1>
+    <nav>
+      <ul>
+        <!-- <button url class="flowerButttons" type="button"><span>
+
+         <input id="flowerButttons" type="image" src="/img/img_7418.jpg" name="saveForm" class="btTxt submit" id="saveForm" width="200px" height="100px"/>
+
+       </span></button> -->
+
+
+        <a href="/whoWeAre">
+          <li> <i class="fa fa-leaf fa" aria-hidden="true">Who We Are</i></li>
+        </a>
+        <a href="/profile">
+          <li><i class="fa fa-leaf fa" aria-hidden="true"> Profile</i></li>
+        </a>
+        <a href="/signup">
+          <li> <i class="fa fa-leaf fa" aria-hidden="true">Sign Up</i></li>
+        </a>
+        <a href="/login">
+          <li><i class="fa fa-leaf fa" aria-hidden="true">Log In</i></li>
+        </a>
+        <a href="/logout">
+          <li><i class="fa fa-leaf fa" aria-hidden="true">Log Out</i></li>
+        </a>
+        <a href="/">
+          <li><i class="fa fa-leaf fa" aria-hidden="true"> Home</i></li>
+        </a>
+        <li><i class="fa fa-leaf fa" aria-hidden="true">Events</i></li>
+        <li><i class="fa fa-leaf fa" aria-hidden="true">News</i></li>
+      </ul>
+    </nav>
+  </header>
+
+
+
+  <main>
+    <form>
+      <h3>Add a User:</h3>
       <label for="email">Enter your email:</label>
       <input type="email" id="email" name="email">
-      <input type="email" id="userId" name="email">
-
       <button class="addPerson" type="button"></button>
- </form>
+    </form>
 
 
-        
- <% console.log( 'this is all users', allUsers[0]) %> 
+    <section class="usersList">
+      <% console.log( 'this is all users', allUsers[0]) %>
 
- <ul class="ListOfUsers">
-  <% for(var i=0; i < allUsers[0].relationship.length; i++) {%>
-    <li class="message">
-      <span style="<%= allUsers[0].relationship[i].isStarred ? 'color:green' : 'color:black' %>"> <%=  allUsers[0].relationship[i].email %> </span>
-    </li>
+      <ul class="ListOfUsers">
+        <% for(var i=0; i < allUsers[0].relationship.length; i++) {%>
+        <li class="message">
+          <span style="<%= allUsers[0].relationship[i].isStarred ? 'color:green' : 'color:black' %>">
+            <%=  allUsers[0].relationship[i].email %> </span>
+        </li>
 
-    <span><%= user._id %></span>
+        <!-- <span><%= user._id %></span> -->
 
-    <span><i data-userIsStarred="<%= allUsers[0].relationship[i].isStarred %>" data-index="<%= i %>" class="fa fa-star"></i></span> 
-            <span><i  data-index="<%= i %>"class="fa fa-trash"></i></span> 
-            <span><%= i %></span>
-  <% } %>
-  </ul>
+        <span><i data-userIsStarred="<%= allUsers[0].relationship[i].isStarred %>" data-index="<%= i %>"
+            class="fa fa-star"></i></span>
+        <span><i data-index="<%= i %>" class="fa fa-trash"></i></span>
+
+        <% } %>
+      </ul>
+    </section>
+
+
+
+  </main>
+
+  <footer>
+    <h4 class="title">Post Partum Direction Copyright ©2022 </h4>
+    <span class="rightSpan">Carla Hores</span>
+  </footer>
 
 
 
 
-
-<script src="relationship.js"></script>
+  <script src="relationship.js"></script>
 
 </body>
+
 </html>
