--- a/public/css/relationship.css
+++ b/public/css/relationship.css
@@ -92,6 +92,17 @@ ul {
   list-style-type: none;
   text-decoration: none;
 }
+.ListOfUsers{
+  margin: 1% 0% 1% 30%;
+  list-style-type: none;
+  text-decoration: none;
+  background-color: #ffffff96;
+  width: 41%;
+}
+.addPerson{
+  width: 12%;
+  height: 10px;
+}
 
 .fa-leaf {
        /* background-color: #febdab; */
@@ -114,16 +125,21 @@ p{
 }
 .fa-trash:before, .fa-star:before {
   content: "\f1f8";
-  color: #f4d3bd;
+  color: #ff4147;
 }
 
 form{
   width: 23%;
   background-color: #8a5834;
+  margin-left: 42%;
 }
 
 footer{
 width:100%; 
 color: white;
 background-color: #8a5834;
+}
+
+.usersList{
+  width: 100%;
 }
