--- a/public/css/signup.css
+++ b/public/css/signup.css
@@ -19,25 +19,28 @@
 
 
 
-#signUp{
-  font-family: 'Fredericka the Great', cursive;
-  background-image: url('/img/signUpBack.jpg');
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
-} 
+
 
 
 body{
-  background-color: aqua;
+  font-family: 'Fredericka the Great', cursive;
+
+  background-image: url('/img/signUP.png');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
   display: flex;
-  flex-wrap: ;
+  flex-wrap: wrap;
+}
+
+.form-control{
+  padding:1% 1% 1% 1% ;
 }
 header, main, footer {
   width: 100%;
 }
 header {
-  height: 10rem;
+  height: 6rem;
   color: rgb(35, 31, 32);
   background-color: #f8cf66;
   text-align: center;
@@ -57,6 +60,7 @@ li {
 
 .fa-leaf {
           /* background-color: #febdab; */
+    color: black;
     font-weight: bold;
     float: left;
     /* margin: 4% 8% 1% 0%; */
@@ -72,3 +76,16 @@ li {
   color: white;
   text-decoration: none;
 }
+
+ul{
+    margin: 2% 0% 0% 13%;
+}
+
+
+  .col-sm-offset-3{
+
+    border: 2px solid #676d64;
+    /* border: solid; */
+    width: 39%;
+  }
+
