--- a/views/post.ejs
+++ b/views/post.ejs
@@ -1,13 +1,15 @@
 <!doctype html>
 <html>
 <head>
-    <title>21 Savage Fan Site</title>
+    <title>Journal Entries</title>
+    <link rel="stylesheet" href="css/partner.css">
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
-    <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Fredericka+the+Great&family=Fruktur&family=Rubik+Glitch&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/partner.css">
+
 </head>
-<body>
+<body id="post">
 <div class="container">
 
     <div class="page-header text-center">
